--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "~4.14.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
