--- a/package.json
+++ b/package.json
@@ -5,35 +5,31 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "devDependencies": {
-    "@types/mini-css-extract-plugin": "^0.2.1",
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/webpack": "^4.4.19",
-    "@types/webpack-dev-server": "^3.1.7",
-    "css-loader": "^1.0.0",
-    "file-loader": "^1.1.11",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "~4.14.1",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "scripts": {
-    "start": "http-server -c-1 .",
-    "start-dev": "webpack-dev-server",
-    "build": "webpack --prod",
-    "build-dev": "webpack"
-  },
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.12.3",
     "lib": "file:lib"
+  },
+  "devDependencies": {
+    "@types/mini-css-extract-plugin": "~1.2.2",
+    "@types/node": "~14.14.22",
+    "@types/react": "~17.0.0",
+    "@types/react-dom": "~17.0.0",
+    "@types/webpack": "~4.41.26",
+    "@types/webpack-dev-server": "~3.11.1",
+    "css-loader": "~5.0.1",
+    "file-loader": "~6.2.0",
+    "http-server": "~0.12.3",
+    "livereload": "~0.9.1",
+    "mini-css-extract-plugin": "~1.3.4",
+    "preact": "~10.5.11",
+    "sass": "~1.32.5",
+    "sass-loader": "~10.1.1",
+    "style-loader": "~2.0.0",
+    "ts-loader": "~8.0.14",
+    "ts-node": "~9.1.1",
+    "typescript": "~4.1.3",
+    "webpack": "~5.16.0",
+    "webpack-cli": "~4.4.0",
+    "webpack-dev-server": "~3.11.2"
   }
 }
